--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                                         <a class="page-scroll" href="#about">Sobre</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#service">Serviços</a>
+                                        <a class="page-scroll" href="#service">Benefícios</a>
                                     </li>
-                                    <!-- <li class="nav-item">
+                                    <li class="nav-item">
                                         <a class="page-scroll" href="#project">Produtos</a>
-                                    </li> -->
+                                    </li>
                                     <!-- <li class="nav-item">
                                         <a class="page-scroll" href="#team">Time</a>
                                     </li> -->
@@ -190,7 +190,7 @@
                             de ponta para garantir a eficiência e confiabilidade em todas as situações. Está procurando
                             um produto, fale com um de nossos consultores!
                         </p>
-                        <a class="main-btn mt-25" href="#">Fale com um consultor</a>
+                        <a class="main-btn mt-25" href="https://api.whatsapp.com/send/?phone=5521979577580&text=Ol%C3%A1,+gostaria+de+saber+mais+sobre+os+servo%C3%A7os+da+Rastreei.&type=phone_number&app_absent=0">Fale com um consultor</a>
                     </div> <!-- about content -->
                 </div>
             </div> <!-- row -->
@@ -206,8 +206,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-20">
-                        <h5 class="sub-title mb-15">Nossos produtos</h5>
-                        <h2 class="title">O que fazemos?</h2>
+                        <h5 class="sub-title mb-15">A melhor escolha</h5>
+                        <h2 class="title">Quais são os Benefícios?</h2>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -216,12 +216,11 @@
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
                         data-wow-delay="0.4s">
                         <div class="services-icon">
-                            <i class="lni-paint-roller"></i>
+                            <i class="lni-users"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Interior Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam,
-                                id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Suporte Exclusivo</h4>
+                            <p class="mt-20">Na Rastreador Store, não apenas fornecemos soluções de rastreamento veicular avançadas, mas também entregamos um suporte exclusivo para nossos clientes. Estamos sempre disponíveis para ajudá-lo com qualquer dúvida ou problema, garantindo que você esteja sempre seguro e protegido.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -229,12 +228,11 @@
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
                         data-wow-delay="0.8s">
                         <div class="services-icon">
-                            <i class="lni-blackboard"></i>
+                            <i class="lni-code-alt"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Design Consultancy</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam,
-                                id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Alta Tecnologia</h4>
+                            <p class="mt-20">Explore a revolução em gestão de ativos com nossa alta tecnologia, proporcionando coleta avançada de dados para otimizar recursos, alertas instantâneos e controle dinâmico por meio de rastreadores de última geração, e monitoramento em tempo real da localização para uma administração eficiente e estratégica.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -242,12 +240,11 @@
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
                         data-wow-delay="1.2s">
                         <div class="services-icon">
-                            <i class="lni-home"></i>
+                            <i class="lni-map-marker"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Residential Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam,
-                                id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Disponibilidade</h4>
+                            <p class="mt-20">Entrega em todo o Brasil com a tranquilidade de 12 meses de garantia em nossos produtos. Garantimos a qualidade e durabilidade, para que você esteja protegido em todo o território nacional. Conte conosco para assegurar a segurança do seu veículo, onde quer que ele esteja no Brasil.</p>
                         </div>
                     </div> <!-- single services -->
                 </div><!-- single services -->
@@ -265,8 +262,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-50">
-                        <h5 class="sub-title mb-15">Featured Works</h5>
-                        <h2 class="title">Projects You May Love</h2>
+                        <h5 class="sub-title mb-15">Excelência em rastreamento</h5>
+                        <h2 class="title">Conheça nossos produtos</h2>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -279,7 +276,7 @@
                             <img src="assets/images/project/p-1.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 1</a>
                         </div>
                     </div>
                 </div>
@@ -289,7 +286,7 @@
                             <img src="assets/images/project/p-2.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 2</a>
                         </div>
                     </div>
                 </div>
@@ -299,7 +296,7 @@
                             <img src="assets/images/project/p-3.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 3</a>
                         </div>
                     </div>
                 </div>
@@ -309,7 +306,7 @@
                             <img src="assets/images/project/p-4.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 4</a>
                         </div>
                     </div>
                 </div>
@@ -319,7 +316,7 @@
                             <img src="assets/images/project/p-5.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 5</a>
                         </div>
                     </div>
                 </div>
@@ -329,7 +326,7 @@
                             <img src="assets/images/project/p-2.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title" >Rastreador Mod. 6</a>
                         </div>
                     </div>
                 </div>
@@ -339,7 +336,7 @@
                             <img src="assets/images/project/p-4.jpg" alt="Project">
                         </div>
                         <div class="project-content">
-                            <a class="project-title" href="#">Home Interior Design</a>
+                            <a class="project-title">Rastreador Mod. 7</a>
                         </div>
                     </div>
                 </div>
@@ -450,7 +447,7 @@
         </div>
         <div class="container">
             <div class="testimonial-bg bg_cover pt-80 pb-80"
-                style="background-image: url(assets/images/testimonial/testimonial-bg.jpg)">
+                style="background-image: url(assets/images/testimonial/testimonial-bg.png)">
                 <div class="row">
                     <div class="col-xl-4 offset-xl-7 col-lg-5 offset-lg-6 col-md-8 offset-md-2 col-sm-10 offset-sm-1">
                         <div class="testimonial-active">
@@ -464,8 +461,8 @@
                                 <div class="testimonial-content mt-20">
                                     <p>Lorem ipsum dolor sit amet, ectetur adipiscing elit. Phasellus vel erat ces,
                                         commodo lectus eu, finibus diam. m ipsum dolor sit amet, ectetur.</p>
-                                    <h5 class="testimonial-name mt-15">Fajar</h5>
-                                    <span class="sub-title">Random Customer</span>
+                                        <h5 class="testimonial-name mt-15">Cliente1</h5>
+                                        <span class="sub-title">Empresa</span>
                                 </div>
                             </div> <!-- single-testimonial -->
                             <div class="single-testimonial text-center">
@@ -478,8 +475,8 @@
                                 <div class="testimonial-content mt-20">
                                     <p>Lorem ipsum dolor sit amet, ectetur adipiscing elit. Phasellus vel erat ces,
                                         commodo lectus eu, finibus diam. m ipsum dolor sit amet, ectetur.</p>
-                                    <h5 class="testimonial-name mt-15">Alina</h5>
-                                    <span class="sub-title">Tesla Motors</span>
+                                        <h5 class="testimonial-name mt-15">Cliente2</h5>
+                                        <span class="sub-title">Empresa</span>
                                 </div>
                             </div> <!-- single-testimonial -->
                             <div class="single-testimonial text-center">
@@ -492,8 +489,8 @@
                                 <div class="testimonial-content mt-20">
                                     <p>Lorem ipsum dolor sit amet, ectetur adipiscing elit. Phasellus vel erat ces,
                                         commodo lectus eu, finibus diam. m ipsum dolor sit amet, ectetur.</p>
-                                    <h5 class="testimonial-name mt-15">Celina</h5>
-                                    <span class="sub-title">CEO, Alo</span>
+                                    <h5 class="testimonial-name mt-15">Cliente3</h5>
+                                    <span class="sub-title">Empresa</span>
                                 </div>
                             </div> <!-- single-testimonial -->
                         </div> <!--  testimonial active -->
@@ -520,7 +517,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="contact-form">
-                        <form id="contact-form" action="assets/contact.php" method="post" data-toggle="validator">
+                        <form id="contact-form" data-toggle="validator">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="single-form form-group">
@@ -553,7 +550,7 @@
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="single-form form-group text-center">
-                                        <button type="submit" class="main-btn">Enviar</button>
+                                        <button type="submit" id="sendButton" class="main-btn">Enviar</button>
                                     </div> <!-- single form -->
                                 </div>
                             </div> <!-- row -->
@@ -639,9 +636,10 @@
                                 <h4 class="title">Links Essenciais</h4>
                             </div>
                             <ul class="mt-15">
-                                <li><a href="#">Sobre</a></li>
-                                <li><a href="#">Produtos</a></li>
-                                <li><a href="#">Contato</a></li>
+                                <li><a href="#about">Sobre</a></li>
+                                <li><a href="#service">Benefícios</a></li>
+                                <li><a href="#project">Produtos</a></li>
+                                <li><a href="#contact">Contato</a></li>
                             </ul>
                         </div>
                     </div>
@@ -664,7 +662,7 @@
                             </div>
                             <p class="mt-15">Entre em contato com nosso atendimento.</p>
                             <form action="#">
-                                <a class="main-btn mt-25" href="#">Fale com um consultor</a>
+                                <a class="main-btn mt-25" href="https://api.whatsapp.com/send/?phone=5521979577580&text=Ol%C3%A1,+gostaria+de+saber+mais+sobre+os+servo%C3%A7os+da+Rastreei.&type=phone_number&app_absent=0">Fale com um consultor</a>
                             </form>
                         </div>
                     </div>
