alteracoes site j16 realizadas

--- a/index.html
+++ b/index.html
@@ -255,6 +255,179 @@
 
     <!--====== SERVICES PART ENDS ======-->
 
+    <section class="l_section">
+        <div class="l_container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-content mt-45">
+                        <h4 class="about-welcome">Sobre </h4>
+                        <h3 class="about-title mt-10" style="color: #fff;">Plataformas Homologadas</h3>
+                        <p class="mt-25" style="color: #fff;">
+                            Nossos rastreadores vem com um protocolo de configuração pré-instalado em várias plataformas de rastreamento veicular, responsáveis por processar os dados recebidos pelo rastreador.
+
+                            Compatível com diversas plataformas, incluindo algumas onde o protocolo é identificado como GT06, CRX1, CRX3, CRX7, AT4 e outras. Se a sua plataforma não estiver nessa lista, entre em contato com o suporte da sua plataforma e peça para adicionar o protocolo
+                        </p>
+                        <!-- <a class="main-btn mt-25" href="https://api.whatsapp.com/send/?phone=5521979577580&text=Ol%C3%A1,+gostaria+de+saber+mais+sobre+os+servo%C3%A7os+da+Rastreei.&type=phone_number&app_absent=0">Fale com um consultor</a> -->
+                    </div> <!-- about content -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo.png" alt="" style="plataformas">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_fulltime1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_getrak1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_hapalo1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_ikonn1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_mapper1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_protrack1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_smartgps1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/softtruck.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_anytrack1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_traccar1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-8">
+                            <div class="text-center mt-50 wow fadeInUp">
+                                <img src="/assets/images/plataformas/logo_systemsat1.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- row -->
+        </div>
+    </section>
+      
+    <section id="service" class="services-area pt-125 pb-130 gray-bg">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section-title text-center pb-20">
+                        <h5 class="sub-title mb-15">Recursos</h5>
+                        <h2 class="title">Principais Funções</h2>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="0.4s">
+                        <div class="services-icon">
+                            <i class="lni-cloud-check"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Comunicação em tempo real</h4>
+                            <!-- <p class="mt-20">Na Rastreador Store, não apenas fornecemos soluções de rastreamento veicular avançadas, mas também entregamos um suporte exclusivo para nossos clientes. Estamos sempre disponíveis para ajudá-lo com qualquer dúvida ou problema, garantindo que você esteja sempre seguro e protegido.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="0.8s">
+                        <div class="services-icon">
+                            <i class="lni-map-marker"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Memória de 2000 posições</h4>
+                            <!-- <p class="mt-20">Explore a revolução em gestão de ativos com nossa alta tecnologia, proporcionando coleta avançada de dados para otimizar recursos, alertas instantâneos e controle dinâmico por meio de rastreadores de última geração, e monitoramento em tempo real da localização para uma administração eficiente e estratégica.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="1.2s">
+                        <div class="services-icon">
+                            <i class="lni-circle-minus"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Bloqueio com cerca virtual</h4>
+                            <!-- <p class="mt-20">Entrega em todo o Brasil com a tranquilidade de 12 meses de garantia em nossos produtos. Garantimos a qualidade e durabilidade, para que você esteja protegido em todo o território nacional. Conte conosco para assegurar a segurança do seu veículo, onde quer que ele esteja no Brasil.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div><!-- single services -->
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="0.4s">
+                        <div class="services-icon">
+                            <i class="lni-warning"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Alertas</h4>
+                            <!-- <p class="mt-20">Na Rastreador Store, não apenas fornecemos soluções de rastreamento veicular avançadas, mas também entregamos um suporte exclusivo para nossos clientes. Estamos sempre disponíveis para ajudá-lo com qualquer dúvida ou problema, garantindo que você esteja sempre seguro e protegido.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="0.8s">
+                        <div class="services-icon">
+                            <i class="lni-page-break"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Bloqueio Remoto</h4>
+                            <!-- <p class="mt-20">Explore a revolução em gestão de ativos com nossa alta tecnologia, proporcionando coleta avançada de dados para otimizar recursos, alertas instantâneos e controle dinâmico por meio de rastreadores de última geração, e monitoramento em tempo real da localização para uma administração eficiente e estratégica.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s"
+                        data-wow-delay="1.2s">
+                        <div class="services-icon">
+                            <i class="lni-signal"></i>
+                        </div>
+                        <div class="services-content mt-15">
+                            <h4 class="services-title">Conectivade 2G e 4G</h4>
+                            <!-- <p class="mt-20">Entrega em todo o Brasil com a tranquilidade de 12 meses de garantia em nossos produtos. Garantimos a qualidade e durabilidade, para que você esteja protegido em todo o território nacional. Conte conosco para assegurar a segurança do seu veículo, onde quer que ele esteja no Brasil.</p> -->
+                        </div>
+                    </div> <!-- single services -->
+                </div><!-- single services -->
+            </div>
+        </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
     <!--====== PROJECT PART START ======-->
 
     <section id="project" class="project-area pt-125 pb-130">
